Fix middle alignment on web browsers and mobile

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -47,7 +47,6 @@ of those sections to manage the look and feel of the site. */
     color: black;
     width: 100%;
     height: 100%;
-    padding-top: 150px;
     text-align: center;
 }
 
@@ -56,8 +55,7 @@ of those sections to manage the look and feel of the site. */
     background: white;
     width: 27%;
     min-width: 124px;
-    margin: 150px auto 30px auto;
-    vertical-align: baseline;
+    margin: 300px auto 30px auto;
 }
 
 #intro p {
@@ -152,12 +150,8 @@ of those sections to manage the look and feel of the site. */
     margin: 0 auto 10px auto;
 }
 
-.intro-section {
-    padding-top: 25px;
-}
-
 #intro h1 {
-    margin: 25px auto 10px auto;
+    margin: 75px auto 10px auto;
 }
 
 }
